--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+
 html {
     margin: 0;
     padding: 0;
     background-color: hsla(179, 62%, 43%, 0.342);
+    font-family: karla, sans-serif;
 }
 .container {
     max-width: 375px;
